--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@ nav {
 }
 
 nav a {
+    font-size: 20px;
+    font-weight: normal;
+    font-style: none;
+    font-family: var(--fonte-destaque1);
     text-decoration: none;
     color: var(--cor2);
     margin-left: 30px;
@@ -56,8 +60,8 @@ nav a {
     border-radius: 7px;
 }
 nav > a:hover {
-    transition: 0.5s;
-    background-color: var(--cor2);
+    transition: 0.6s;
+    background-color: var(--cor3);
     color: var(--cor4) ;
 }
 main {
@@ -73,8 +77,13 @@ main p {
 
 }
 main h2 {
+    display: inline-block;
+
     font-family: var(--fonte-padrao);
-    padding: 10px;
+    padding: 1px 0px 10px 5px;
+    background-color: aqua;
+
+
 }
 ul {
     padding-top: 10px;
@@ -82,4 +91,14 @@ ul {
     font-family: Arial;
     columns: 2;
     padding-left: 30px;
+    background-color: darkcyan;
+    border-radius: 7px;
+}
+abbr {
+    text-decoration: none;
+}
+img {
+    margin-top:10px;
+    max-width: 100px;
+    max-height: 30px;
 }
