--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 }
 header {
     background-color:var(--cor3);
-    min-height: 200px;
+    min-height: 150px;
     background-color: var(--cor1);
 
 }
@@ -39,8 +39,9 @@ header h1 {
     font-family: var(--fonte-destaque);
     color: var(--cor2);
     text-align: center;
-    padding-top: 6%;
+    padding-top: 5%;
     font-size: 50px;
+    text-shadow: 5px 5px 5px black;
 }
 nav {
     background-color: var(--cor0);
@@ -78,27 +79,25 @@ main p {
 }
 main h2 {
     display: inline-block;
-
-    font-family: var(--fonte-padrao);
-    padding: 1px 0px 10px 5px;
-    background-color: aqua;
-
-
+    font-family: var(--fonte-destaque1);
+    padding: 1px 10px 10px 5px;
+    font-weight: normal;
 }
 ul {
     padding-top: 10px;
     font-size: 20px;
     font-family: Arial;
     columns: 2;
-    padding-left: 30px;
-    background-color: darkcyan;
+    
     border-radius: 7px;
+    list-style-type: '\1F7E6\00A0';
 }
 abbr {
     text-decoration: none;
 }
 img {
     margin-top:10px;
-    max-width: 100px;
-    max-height: 30px;
+    width: 50px;
+    margin-bottom:-20px;
+
 }
