--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ abbr {
     text-decoration: none;
 }
 img {
+    display: inline-block;
     margin: auto;
     margin-top:10px;
     width: 50px;
