--- a/style.css
+++ b/style.css
@@ -78,9 +78,7 @@ main p {
 
 }
 main h2 {
-    display: inline-block;
     font-family: var(--fonte-destaque1);
-    padding: 1px 10px 20px 10px;
     font-weight: normal;
 }
 ul {
@@ -89,17 +87,20 @@ ul {
     font-family: Arial;
     columns: 2;
     padding-left: 40px;
-    border-radius: 7px;
-    list-style-type: '\1F7E6\00A0';
+    /*list-style-type: '\1F7E6\00A0';*/
 }
 abbr {
     text-decoration: none;
 }
-img {
-    display: inline-block;
-    margin: auto;
-    margin-top:10px;
-    width: 50px;
-    margin-bottom:-20px;
 
+.logo {
+    display: flex;
+    align-items: center;
+    padding: 10px 0px 0px 10px;
+
+}
+img {
+    width: 60px;
+    padding-right: 10px;
+    
 }
